# deng

./: .gitignore
01/: Dockerfile  README.md  ingest.py  pyproject.toml  test_ingest.py
01/data/: green_tripdata_2019-10.sample.parquet  taxi_zone_lookup.csv.sample.csv
02/: .env  README.md  nyc_taxi.py  orchestration.py  pyproject.toml  test_nyc_taxi.py
03/: .env  README.md  nyc_taxi.py  orchestration.py  pyproject.toml
03/terraform/: main.tf  variables.tf
